# blenderflow

./: .gitignore  CMakeLists.txt  README.md  README.rst  colon.blend  colon.blend1  colon.blend2  colon.blend3  colon.blend4  colon.blend5  colon.ply  colon.stl  colon_ascii.ply  pedal.py  ply_reader.c  test.py
OriginalBlends/: colon.blend  colon.blend1  colon_lowres.blend  colon_slices.blend  colon_slices_1.blend  colon_slices_1.blend1  colon_slices_base.blend  colon_slices_base.blend1
app/: CMakeLists.txt  app.c
assets/: ColonLicence.txt
assets/Colon/: Colon.blend  Colon.ply  Colon.stl  ColonR1.blend  ColonR1.stl  ColonR1_ascii.stl  Colon_ascii.ply  Colon_ascii.stl  Colon_ply_ascii_vertex_as_py_list.txt
cmake/: python_extension_build.cmake  utils.cmake
include/Binding/Python/: arrayutils.h  model.h
include/Endianness/: endianness.h
include/Model/: model.h  ply_reader.h  stl_reader.h
include/Primatives/: tri.h  vec.h
python/: Colon.stl  generate_slices.py  test.py
python/blenderflow/: __init__.py
python/blenderflow/model/: __init__.py  ply_model.py  stl_model.py
python/blenderflow/primitives/: __init__.py  tri.py  vec.py
python/model/: model.py
src/: CMakeLists.txt
src/endianness/: CMakeLists.txt  endianness.c
src/model/: CMakeLists.txt  ply_reader.c  stl_reader.c
src/primatives/: CMakeLists.txt
src/python/: CMakeLists.txt  arrayutils.c  blenderflow.c  model.c
